[package]
name = "qmushclient"
version = "0.0.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2021"
publish = false
description = "Cross-platform MUD game client based on Nick Gammon's MUSHclient, built with Rust and the QT framework"
repository = "https://github.com/jnbooth/qmushclient"

[features]
show-special = []

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
cpp_core = "0.6.0"
enumeration = { git = "https://github.com/jnbooth/enumeration" }
fancy-regex = "0.13.0"
flate2 = "1.0.28"
gethostname = "0.4.3"
itertools = "0.12.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
luajit-src = ">= 210.1.2, < 220.0.0"
mlua = { version = "0.9.2", features = ["luajit", "vendored"] }
once_cell = "1.19.0"
pcre2-sys = "0.2.7"
qmushclient_derive = { path = "qmushclient-derive" }
qt_core = { path = "lib/qt_core" }
qt_gui = { path = "lib/qt_gui" }
qt_network = { path = "lib/qt_network" }
qt_ui_tools = { path = "lib/qt_ui_tools" }
qt_widgets = { path = "lib/qt_widgets" }
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
cc = "1.0"
qt_ritual_build = { path = "lib/ritual/qt_ritual_build" }
