[workspace]
resolver = "2"
members = [
  "case_insensitive",
  "qmushclient",
  "qmushclient_derive",
  "qt/qt",
  "qt/qt_core",
  "qt/qt_derive",
  "qt/qt_gui",
  "qt/qt_network",
  "qt/qt_ui_tools",
  "qt/qt_widgets",
  "tr",
  "tr_derive",
  "ritual/qt_ritual_build",
  "ritual/qt_ritual_common",
  "ritual/ritual_build",
  "ritual/ritual_common",
]
