[package]
name = "lua-modules-sys"
version = "0.0.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2021"
publish = false
description = "Bindings for Lua modules exposed to addons"
repository = "https://github.com/jnbooth/qmushclient"

[dependencies]
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
luajit-src = ">= 210.1.2, < 220.0.0"
mlua = { version = "0.9.2", features = ["luajit", "vendored"] }
pcre2-sys = "0.2.7"

[build-dependencies]
cc = "1.0"
