[package]
name = "qmushclient_derive"
version = "0.1.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
hashbrown = "0.11.2"
quote = "1.0.2"
syn = { version = "1.0.8", features = ["full", "extra-traits", "clone-impls"] }
proc-macro2 = {version = "1.0", features = ["span-locations"]}
