[package]
name = "qmushclient_scripting"
version = "0.0.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2021"
publish = false
description = "Lua scripting for qMUSHclient"
repository = "https://github.com/jnbooth/qmushclient"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
cpp_core = "0.6.0"
enumeration = { git = "https://github.com/jnbooth/enumeration", version = "0.4.2" }
enumeration_derive = { git = "https://github.com/jnbooth/enumeration", version = "0.4.2" }
fancy-regex = "0.13.0"
lua-modules-sys = { path = "../lua-modules-sys" }
mlua = { version = "0.9.2", features = ["luajit", "vendored"] }
qt = { path = "../qt/qt", features = ["serde"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
tr = { path = "../tr" }
tr_derive = { path = "../tr_derive" }
