[package]
name = "qt_bindings"
version = "0.0.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2021"
publish = false
description = "Wrapper around Qt"
repository = "https://github.com/jnbooth/qmushclient"

[features]
show-special = []

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
cpp_core = "0.6.0"
enumeration = { git = "https://github.com/jnbooth/enumeration" }
enumeration_derive = { git = "https://github.com/jnbooth/enumeration" }
mlua = { version = "0.9.2", features = ["luajit", "vendored"] }
qt_core = { path = "../qt/qt_core" }
qt_gui = { path = "../qt/qt_gui" }
qt_network = { path = "../qt/qt_network" }
qt_widgets = { path = "../qt/qt_widgets" }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
