[features]
ritual_rustdoc = ["qt_core/ritual_rustdoc"]
ritual_rustdoc_nightly = ["qt_core/ritual_rustdoc_nightly"]

[package]
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
build = "build.rs"
categories = ["external-ffi-bindings", "gui"]
description = "Bindings for QtNetwork C++ library"
documentation = "https://docs.rs/qt_network"
edition = "2018"
keywords = ["gui", "ffi", "qt", "ritual"]
license = "MIT OR Apache-2.0"
name = "qt_network"
repository = "https://github.com/rust-qt/ritual"
version = "0.5.0"
[package.metadata.docs.rs]
features = ["ritual_rustdoc", "ritual_rustdoc_nightly"]

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
serde = { version = "=1.0.118", features = ["derive"] }
syn = "=1.0.57"

[build-dependencies]
qt_ritual_build = { path = "../ritual/qt_ritual_build" } #"0.5.0"
