[package]
name = "qt_derive"
version = "0.1.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "1.0.8", features = ["full", "extra-traits", "clone-impls"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
